clean up rename file method

--- a/Web_Scraping_monthly_trip_data_in_bulk.ipynb
+++ b/Web_Scraping_monthly_trip_data_in_bulk.ipynb
@@ -2896,7 +2896,15 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total files: 148\n"
+     ]
+    }
+   ],
    "source": [
     "#Declare file format to parse and append all \".zip\" files\n",
     "filetype='.zip'\n",
@@ -2908,7 +2916,9 @@
     "    file_link=link.text\n",
     "    if filetype in file_link:\n",
     "#         print(file_link)\n",
-    "        zip_file_list.append(file_link)"
+    "        zip_file_list.append(file_link)\n",
+    "    \n",
+    "print('Total files: ' + str(len(zip_file_list)))"
    ]
   },
   {
@@ -2917,166 +2927,16 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['201306-citibike-tripdata.zip',\n",
-       " '201307-201402-citibike-tripdata.zip',\n",
-       " '201307-citibike-tripdata.zip',\n",
-       " '201308-citibike-tripdata.zip',\n",
-       " '201309-citibike-tripdata.zip',\n",
-       " '201310-citibike-tripdata.zip',\n",
-       " '201311-citibike-tripdata.zip',\n",
-       " '201312-citibike-tripdata.zip',\n",
-       " '201401-citibike-tripdata.zip',\n",
-       " '201402-citibike-tripdata.zip',\n",
-       " '201403-citibike-tripdata.zip',\n",
-       " '201404-citibike-tripdata.zip',\n",
-       " '201405-citibike-tripdata.zip',\n",
-       " '201406-citibike-tripdata.zip',\n",
-       " '201407-citibike-tripdata.zip',\n",
-       " '201408-citibike-tripdata.zip',\n",
-       " '201409-citibike-tripdata.zip',\n",
-       " '201410-citibike-tripdata.zip',\n",
-       " '201411-citibike-tripdata.zip',\n",
-       " '201412-citibike-tripdata.zip',\n",
-       " '201501-citibike-tripdata.zip',\n",
-       " '201502-citibike-tripdata.zip',\n",
-       " '201503-citibike-tripdata.zip',\n",
-       " '201504-citibike-tripdata.zip',\n",
-       " '201505-citibike-tripdata.zip',\n",
-       " '201506-citibike-tripdata.zip',\n",
-       " '201507-citibike-tripdata.zip',\n",
-       " '201508-citibike-tripdata.zip',\n",
-       " '201509-citibike-tripdata.zip',\n",
-       " '201510-citibike-tripdata.zip',\n",
-       " '201511-citibike-tripdata.zip',\n",
-       " '201512-citibike-tripdata.zip',\n",
-       " '201601-citibike-tripdata.zip',\n",
-       " '201602-citibike-tripdata.zip',\n",
-       " '201603-citibike-tripdata.zip',\n",
-       " '201604-citibike-tripdata.zip',\n",
-       " '201605-citibike-tripdata.zip',\n",
-       " '201606-citibike-tripdata.zip',\n",
-       " '201607-citibike-tripdata.zip',\n",
-       " '201608-citibike-tripdata.zip',\n",
-       " '201609-citibike-tripdata.zip',\n",
-       " '201610-citibike-tripdata.zip',\n",
-       " '201611-citibike-tripdata.zip',\n",
-       " '201612-citibike-tripdata.zip',\n",
-       " '201701-citibike-tripdata.csv.zip',\n",
-       " '201702-citibike-tripdata.csv.zip',\n",
-       " '201703-citibike-tripdata.csv.zip',\n",
-       " '201704-citibike-tripdata.csv.zip',\n",
-       " '201705-citibike-tripdata.csv.zip',\n",
-       " '201706-citibike-tripdata.csv.zip',\n",
-       " '201707-citibike-tripdata.csv.zip',\n",
-       " '201708-citibike-tripdata.csv.zip',\n",
-       " '201709-citibike-tripdata.csv.zip',\n",
-       " '201710-citibike-tripdata.csv.zip',\n",
-       " '201711-citibike-tripdata.csv.zip',\n",
-       " '201712-citibike-tripdata.csv.zip',\n",
-       " '201801-citibike-tripdata.csv.zip',\n",
-       " '201802-citibike-tripdata.csv.zip',\n",
-       " '201803-citibike-tripdata.csv.zip',\n",
-       " '201804-citibike-tripdata.csv.zip',\n",
-       " '201805-citibike-tripdata.csv.zip',\n",
-       " '201806-citibike-tripdata.csv.zip',\n",
-       " '201807-citibike-tripdata.csv.zip',\n",
-       " '201808-citibike-tripdata.csv.zip',\n",
-       " '201809-citibike-tripdata.csv.zip',\n",
-       " '201810-citibike-tripdata.csv.zip',\n",
-       " '201811-citibike-tripdata.csv.zip',\n",
-       " '201812-citibike-tripdata.csv.zip',\n",
-       " '201901-citibike-tripdata.csv.zip',\n",
-       " '201902-citibike-tripdata.csv.zip',\n",
-       " '201903-citibike-tripdata.csv.zip',\n",
-       " '201904-citibike-tripdata.csv.zip',\n",
-       " '201905-citibike-tripdata.csv.zip',\n",
-       " '201906-citibike-tripdata.csv.zip',\n",
-       " '201907-citibike-tripdata.csv.zip',\n",
-       " '201908-citibike-tripdata.csv.zip',\n",
-       " '201909-citibike-tripdata.csv.zip',\n",
-       " '201910-citibike-tripdata.csv.zip',\n",
-       " '201911-citibike-tripdata.csv.zip',\n",
-       " '201912-citibike-tripdata.csv.zip',\n",
-       " '202001-citibike-tripdata.csv.zip',\n",
-       " '202002-citibike-tripdata.csv.zip',\n",
-       " '202003-citibike-tripdata.csv.zip',\n",
-       " '202004-citibike-tripdata.csv.zip',\n",
-       " '202005-citibike-tripdata.csv.zip',\n",
-       " '202006-citibike-tripdata.csv.zip',\n",
-       " '202007-citibike-tripdata.csv.zip',\n",
-       " '202008-citibike-tripdata.csv.zip',\n",
-       " 'JC-201509-citibike-tripdata.csv.zip',\n",
-       " 'JC-201510-citibike-tripdata.csv.zip',\n",
-       " 'JC-201511-citibike-tripdata.csv.zip',\n",
-       " 'JC-201512-citibike-tripdata.csv.zip',\n",
-       " 'JC-201601-citibike-tripdata.csv.zip',\n",
-       " 'JC-201602-citibike-tripdata.csv.zip',\n",
-       " 'JC-201603-citibike-tripdata.csv.zip',\n",
-       " 'JC-201604-citibike-tripdata.csv.zip',\n",
-       " 'JC-201605-citibike-tripdata.csv.zip',\n",
-       " 'JC-201606-citibike-tripdata.csv.zip',\n",
-       " 'JC-201607-citibike-tripdata.csv.zip',\n",
-       " 'JC-201608-citibike-tripdata.csv.zip',\n",
-       " 'JC-201609-citibike-tripdata.csv.zip',\n",
-       " 'JC-201610-citibike-tripdata.csv.zip',\n",
-       " 'JC-201611-citibike-tripdata.csv.zip',\n",
-       " 'JC-201612-citibike-tripdata.csv.zip',\n",
-       " 'JC-201701-citibike-tripdata.csv.zip',\n",
-       " 'JC-201702-citibike-tripdata.csv.zip',\n",
-       " 'JC-201703-citibike-tripdata.csv.zip',\n",
-       " 'JC-201704-citibike-tripdata.csv.zip',\n",
-       " 'JC-201705-citibike-tripdata.csv.zip',\n",
-       " 'JC-201706-citibike-tripdata.csv.zip',\n",
-       " 'JC-201707-citibike-tripdata.csv.zip',\n",
-       " 'JC-201708 citibike-tripdata.csv.zip',\n",
-       " 'JC-201709-citibike-tripdata.csv.zip',\n",
-       " 'JC-201710-citibike-tripdata.csv.zip',\n",
-       " 'JC-201711-citibike-tripdata.csv.zip',\n",
-       " 'JC-201712-citibike-tripdata.csv.zip',\n",
-       " 'JC-201801-citibike-tripdata.csv.zip',\n",
-       " 'JC-201802-citibike-tripdata.csv.zip',\n",
-       " 'JC-201803-citibike-tripdata.csv.zip',\n",
-       " 'JC-201804-citibike-tripdata.csv.zip',\n",
-       " 'JC-201805-citibike-tripdata.csv.zip',\n",
-       " 'JC-201806-citibike-tripdata.csv.zip',\n",
-       " 'JC-201807-citibike-tripdata.csv.zip',\n",
-       " 'JC-201808-citibike-tripdata.csv.zip',\n",
-       " 'JC-201809-citibike-tripdata.csv.zip',\n",
-       " 'JC-201810-citibike-tripdata.csv.zip',\n",
-       " 'JC-201811-citibike-tripdata.csv.zip',\n",
-       " 'JC-201812-citibike-tripdata.csv.zip',\n",
-       " 'JC-201901-citibike-tripdata.csv.zip',\n",
-       " 'JC-201902-citibike-tripdata.csv.zip',\n",
-       " 'JC-201903-citibike-tripdata.csv.zip',\n",
-       " 'JC-201904-citibike-tripdata.csv.zip',\n",
-       " 'JC-201905-citibike-tripdata.csv.zip',\n",
-       " 'JC-201906-citibike-tripdata.csv.zip',\n",
-       " 'JC-201907-citibike-tripdata.csv.zip',\n",
-       " 'JC-201908-citibike-tripdata.csv.zip',\n",
-       " 'JC-201909-citibike-tripdata.csv.zip',\n",
-       " 'JC-201910-citibike-tripdata.csv.zip',\n",
-       " 'JC-201911-citibike-tripdata.csv.zip',\n",
-       " 'JC-201912-citibike-tripdata.csv.zip',\n",
-       " 'JC-202001-citibike-tripdata.csv.zip',\n",
-       " 'JC-202002-citibike-tripdata.csv.zip',\n",
-       " 'JC-202003-citibike-tripdata.csv.zip',\n",
-       " 'JC-202004-citibike-tripdata.csv.zip',\n",
-       " 'JC-202005-citibike-tripdata.csv.zip',\n",
-       " 'JC-202006-citibike-tripdata.csv.zip',\n",
-       " 'JC-202007-citibike-tripdata.csv.zip',\n",
-       " 'JC-202008-citibike-tripdata.csv.zip']"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['201306-citibike-tripdata.zip', '201307-201402-citibike-tripdata.zip', '201307-citibike-tripdata.zip', '201308-citibike-tripdata.zip', '201309-citibike-tripdata.zip', '201310-citibike-tripdata.zip', '201311-citibike-tripdata.zip', '201312-citibike-tripdata.zip', '201401-citibike-tripdata.zip', '201402-citibike-tripdata.zip'] ['JC-201911-citibike-tripdata.csv.zip', 'JC-201912-citibike-tripdata.csv.zip', 'JC-202001-citibike-tripdata.csv.zip', 'JC-202002-citibike-tripdata.csv.zip', 'JC-202003-citibike-tripdata.csv.zip', 'JC-202004-citibike-tripdata.csv.zip', 'JC-202005-citibike-tripdata.csv.zip', 'JC-202006-citibike-tripdata.csv.zip', 'JC-202007-citibike-tripdata.csv.zip', 'JC-202008-citibike-tripdata.csv.zip']\n"
+     ]
     }
    ],
    "source": [
     "#Print Zip_file_list & Exam the list to see if any DUPLICATED or UNWANTED files\n",
-    "zip_file_list"
+    "print(zip_file_list[:10], zip_file_list[138:])"
    ]
   },
   {
@@ -3085,99 +2945,11 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['201306-citibike-tripdata.zip',\n",
-       " '201307-citibike-tripdata.zip',\n",
-       " '201308-citibike-tripdata.zip',\n",
-       " '201309-citibike-tripdata.zip',\n",
-       " '201310-citibike-tripdata.zip',\n",
-       " '201311-citibike-tripdata.zip',\n",
-       " '201312-citibike-tripdata.zip',\n",
-       " '201401-citibike-tripdata.zip',\n",
-       " '201403-citibike-tripdata.zip',\n",
-       " '201404-citibike-tripdata.zip',\n",
-       " '201405-citibike-tripdata.zip',\n",
-       " '201406-citibike-tripdata.zip',\n",
-       " '201407-citibike-tripdata.zip',\n",
-       " '201408-citibike-tripdata.zip',\n",
-       " '201409-citibike-tripdata.zip',\n",
-       " '201410-citibike-tripdata.zip',\n",
-       " '201411-citibike-tripdata.zip',\n",
-       " '201412-citibike-tripdata.zip',\n",
-       " '201501-citibike-tripdata.zip',\n",
-       " '201502-citibike-tripdata.zip',\n",
-       " '201503-citibike-tripdata.zip',\n",
-       " '201504-citibike-tripdata.zip',\n",
-       " '201505-citibike-tripdata.zip',\n",
-       " '201506-citibike-tripdata.zip',\n",
-       " '201507-citibike-tripdata.zip',\n",
-       " '201508-citibike-tripdata.zip',\n",
-       " '201509-citibike-tripdata.zip',\n",
-       " '201510-citibike-tripdata.zip',\n",
-       " '201511-citibike-tripdata.zip',\n",
-       " '201512-citibike-tripdata.zip',\n",
-       " '201601-citibike-tripdata.zip',\n",
-       " '201602-citibike-tripdata.zip',\n",
-       " '201603-citibike-tripdata.zip',\n",
-       " '201604-citibike-tripdata.zip',\n",
-       " '201605-citibike-tripdata.zip',\n",
-       " '201606-citibike-tripdata.zip',\n",
-       " '201607-citibike-tripdata.zip',\n",
-       " '201608-citibike-tripdata.zip',\n",
-       " '201609-citibike-tripdata.zip',\n",
-       " '201610-citibike-tripdata.zip',\n",
-       " '201611-citibike-tripdata.zip',\n",
-       " '201612-citibike-tripdata.zip',\n",
-       " '201701-citibike-tripdata.csv.zip',\n",
-       " '201702-citibike-tripdata.csv.zip',\n",
-       " '201703-citibike-tripdata.csv.zip',\n",
-       " '201704-citibike-tripdata.csv.zip',\n",
-       " '201705-citibike-tripdata.csv.zip',\n",
-       " '201706-citibike-tripdata.csv.zip',\n",
-       " '201707-citibike-tripdata.csv.zip',\n",
-       " '201708-citibike-tripdata.csv.zip',\n",
-       " '201709-citibike-tripdata.csv.zip',\n",
-       " '201710-citibike-tripdata.csv.zip',\n",
-       " '201711-citibike-tripdata.csv.zip',\n",
-       " '201712-citibike-tripdata.csv.zip',\n",
-       " '201801-citibike-tripdata.csv.zip',\n",
-       " '201802-citibike-tripdata.csv.zip',\n",
-       " '201803-citibike-tripdata.csv.zip',\n",
-       " '201804-citibike-tripdata.csv.zip',\n",
-       " '201805-citibike-tripdata.csv.zip',\n",
-       " '201806-citibike-tripdata.csv.zip',\n",
-       " '201807-citibike-tripdata.csv.zip',\n",
-       " '201808-citibike-tripdata.csv.zip',\n",
-       " '201809-citibike-tripdata.csv.zip',\n",
-       " '201810-citibike-tripdata.csv.zip',\n",
-       " '201811-citibike-tripdata.csv.zip',\n",
-       " '201812-citibike-tripdata.csv.zip',\n",
-       " '201901-citibike-tripdata.csv.zip',\n",
-       " '201902-citibike-tripdata.csv.zip',\n",
-       " '201903-citibike-tripdata.csv.zip',\n",
-       " '201904-citibike-tripdata.csv.zip',\n",
-       " '201905-citibike-tripdata.csv.zip',\n",
-       " '201906-citibike-tripdata.csv.zip',\n",
-       " '201907-citibike-tripdata.csv.zip',\n",
-       " '201908-citibike-tripdata.csv.zip',\n",
-       " '201909-citibike-tripdata.csv.zip',\n",
-       " '201910-citibike-tripdata.csv.zip',\n",
-       " '201911-citibike-tripdata.csv.zip',\n",
-       " '201912-citibike-tripdata.csv.zip',\n",
-       " '202001-citibike-tripdata.csv.zip',\n",
-       " '202002-citibike-tripdata.csv.zip',\n",
-       " '202003-citibike-tripdata.csv.zip',\n",
-       " '202004-citibike-tripdata.csv.zip',\n",
-       " '202005-citibike-tripdata.csv.zip',\n",
-       " '202006-citibike-tripdata.csv.zip',\n",
-       " '202007-citibike-tripdata.csv.zip',\n",
-       " '202008-citibike-tripdata.csv.zip']"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total targeted files: 86\n"
+     ]
     }
    ],
    "source": [
@@ -3190,14 +2962,17 @@
     "        if i in dup_file: \n",
     "            file_list.remove(i)\n",
     "            \n",
-    "file_list"
+    "print('Total targeted files: ' + str(len(file_list)))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Loop through the file_list \n",
+    "## Extract Bulk Files Method (1)\n",
+    "\n",
+    "Loop through the file_list and download each .csv\n",
+    "\n",
     "    1) Loop through the \"file_list\" \n",
     "    2) open each zip file\n",
     "    3) unzip the file\n",
@@ -3218,7 +2993,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Execution time: 6.614868 minutes\n"
+      "Execution time: 16.95596 minutes\n"
      ]
     }
    ],
@@ -3250,50 +3025,21 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Standarize file names in tripdata folder"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# rename files \n",
+    "# rename: Standarize file names in tripdata folder\n",
     "directory = 'tripdata/'\n",
     "for file in os.listdir(directory):\n",
     "    filename = os.fsdecode(file)\n",
     "    if filename.endswith('.csv'):\n",
-    "        new_filename1 = filename.replace(' ','').replace('-','_').lower()\n",
-    "        new_filename= new_filename1.strip('_')\n",
-    "        os.rename(os.path.join(directory, filename), os.path.join(directory, new_filename))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # rename files \n",
-    "# directory = 'tripdata/'\n",
-    "# for file in os.listdir(directory):\n",
-    "#     filename = os.fsdecode(file)\n",
-    "#     if filename.endswith('.csv'):\n",
-    "#         new_filename = filename.replace(' ','').lower().split('ci', 1)[0].strip('-').replace('-','_')\n",
-    "#         os.rename(os.path.join(directory, filename), os.path.join(directory, new_filename + '.csv'))\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        new_filename = filename.replace('-','').replace(' ','').lower()\n",
+    "#         new_filename1 = filename.replace(' ','').replace('-','_').lower()\n",
+    "#         new_filename= new_filename1.strip('_')\n",
+    "        os.rename(os.path.join(directory, filename), os.path.join(directory, new_filename))\n",
+    "    \n",
     "# #load into DataFrames into dfs dictionary\n",
     "# directory = 'tripdata/'\n",
     "# dfs = {}\n",
@@ -3305,18 +3051,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "directory = 'tripdata/'\n",
-    "# keyword = ''\n",
-    "for file in os.listdir(directory):\n",
-    "    filename = os.fsdecode(file)\n",
-    "    print(filename)\n",
-    "#     grep - r 'JC'\n",
-    " "
+    "## Extract Bulk Files Method (2)\n",
+    "\n",
+    "Loop through the file_list and download each .csv\n",
+    "\n",
+    "    1) Loop through the \"file_list\" \n",
+    "    2) open each zip file\n",
+    "    3) unzip the file\n",
+    "    4) extract .csv from each zip file\n",
+    "    5) remove zipped file before next iteration\n",
+    "    6) print execution time \n",
+    "    7) Load into MS SQL Server Management Studio\n",
+    "    \n",
+    "  "
    ]
   },
   {
