--- a/Web_Scraping_monthly_trip_data_in_bulk.ipynb
+++ b/Web_Scraping_monthly_trip_data_in_bulk.ipynb
@@ -472,7 +472,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Extract Bulk Files Method (1)\n",
+    "## Extract Bulk Files Method (1) - To .csv\n",
     "\n",
     "Loop through the file_list and download each .csv\n",
     "\n",
@@ -557,7 +557,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Extract Bulk Files Method (2)\n",
+    "## Extract Bulk Files Method (2) - to  Microsoft SQL Server\n",
     "\n",
     "Loop through the file_list and download each .csv\n",
     "\n",
@@ -571,6 +571,158 @@
     "    \n",
     "  "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pyodbc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dbConnnect = pyodbc.connect(\"Driver={SQL Server Native Client 11.0};\"\n",
+    "                            \"Server=LAPTOP-BURU7IOO\\SQLSERVER2019;\"\n",
+    "#                             \"Database=citibike;\"\n",
+    "                            \"Trusted_Connection=yes;\"\n",
+    "                            \"autocommit = True;\") # autocommit=False by default"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To initialize a cursor:\n",
+    "dbCursor = dbConnnect.cursor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Database ='master'\n",
+      "Database ='tempdb'\n",
+      "Database ='model'\n",
+      "Database ='msdb'\n",
+      "Database ='KinetEco'\n",
+      "Database ='LandonHotel'\n",
+      "Database ='WideWorldImporters'\n",
+      "Database ='citibike'\n"
+     ]
+    }
+   ],
+   "source": [
+    "# https://www.tutorialgateway.org/python-sql-create-db/\n",
+    "dbCursor.execute(\"select * from master.dbo.sysdatabases\")\n",
+    "for x in dbCursor:\n",
+    "    print('Database =%r'%x[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>GuestID</th>\n",
+       "      <th>FirstName</th>\n",
+       "      <th>LastName</th>\n",
+       "      <th>Address</th>\n",
+       "      <th>City</th>\n",
+       "      <th>State</th>\n",
+       "      <th>PostalCode</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>TimeStamp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1000</td>\n",
+       "      <td>Katherine</td>\n",
+       "      <td>Reid</td>\n",
+       "      <td>8 Maple Parkway</td>\n",
+       "      <td>Redding</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>96003</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>NaT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1001</td>\n",
+       "      <td>Eric</td>\n",
+       "      <td>Bryant</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaT</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   GuestID  FirstName LastName          Address     City State  PostalCode  \\\n",
+       "0     1000  Katherine     Reid  8 Maple Parkway  Redding    CA  96003        \n",
+       "1     1001       Eric   Bryant             None     None  None        None   \n",
+       "\n",
+       "         Country TimeStamp  \n",
+       "0  United States       NaT  \n",
+       "1           None       NaT  "
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.read_sql(\"select * from [LandonHotel].[dbo].[Guests]\",dbConnnect)\n",
+    "data.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
