--- a/Web_Scraping_monthly_trip_data_in_bulk.ipynb
+++ b/Web_Scraping_monthly_trip_data_in_bulk.ipynb
@@ -322,16 +322,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "' \"\\n<?xml version=\"1.0\" encoding=\"UTF-8\"?>\\n<html>\\n <body>\\n  <listbucketresult xmlns=\"http://s3.amazonaws.com/doc/2006-03-01/\">\\n   <name>\\n    tripdata\\n   </name>\\n   <prefix>\\n   </prefix>\\n   <marker>\\n   </marker>\\n   <maxkeys>\\n    1000\\n   </maxkeys>\\n   <istruncated>\\n    false\\n   </istruncated>\\n   <contents>\\n    <key>\\n     201306-citibike-tripdata.zip\\n    </key>\\n    <lastmodified>\\n     2018-04-30T13:18:55.000Z\\n    </lastmodified>\\n    <etag>\\n     \"b520a12de58eea58a3586f89bfcfbd9d-2\"\\n    </etag>\\n    <size>\\n     16785103\\n    </size>\\n    <storageclass>\\n     STANDARD\\n    </storageclass>\\n   </contents>\\n   <contents>\\n    <key>\\n     201307-201402-citibike-tripdata.zip\\n    </key>\\n    <lastmodified>\\n     2017-01-18T22:23:25.000Z\\n    </lastmodified>\\n    <etag>\\n     \"7b3b260b2ab2e5349320121d04bd821c-22\"\\n    </etag>\\n    <size>\\n     178262576\\n    </size>\\n    <storageclass>\\n     STANDARD\\n    </storageclass>\\n   </contents>\\n  \"\\n\\n'"
+       "' \\n<?xml version=\"1.0\" encoding=\"UTF-8\"?>\\n<html>\\n <body>\\n  <listbucketresult xmlns=\"http://s3.amazonaws.com/doc/2006-03-01/\">\\n   <name>\\n    tripdata\\n   </name>\\n   <prefix>\\n   </prefix>\\n   <marker>\\n   </marker>\\n   <maxkeys>\\n    1000\\n   </maxkeys>\\n   <istruncated>\\n    false\\n   </istruncated>\\n   <contents>\\n    <key>\\n     201306-citibike-tripdata.zip\\n    </key>\\n    <lastmodified>\\n     2018-04-30T13:18:55.000Z\\n    </lastmodified>\\n    <etag>\\n     \"b520a12de58eea58a3586f89bfcfbd9d-2\"\\n    </etag>\\n    <size>\\n     16785103\\n    </size>\\n    <storageclass>\\n     STANDARD\\n    </storageclass>\\n   </contents>\\n   <contents>\\n    <key>\\n     201307-201402-citibike-tripdata.zip\\n    </key>\\n    <lastmodified>\\n     2017-01-18T22:23:25.000Z\\n    </lastmodified>\\n    <etag>\\n     \"7b3b260b2ab2e5349320121d04bd821c-22\"\\n    </etag>\\n    <size>\\n     178262576\\n    </size>\\n    <storageclass>\\n     STANDARD\\n    </storageclass>\\n   </contents>\\n'"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +472,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Extract Bulk Files Method (1) - To .csv\n",
+    "## Extract Bulk Files Step (1) - To .csv\n",
     "\n",
     "Loop through the file_list and download each .csv\n",
     "\n",
@@ -496,7 +496,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Execution time: 16.95596 minutes\n"
+      "Execution time: 7.531069 minutes\n"
      ]
     }
    ],
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +557,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Extract Bulk Files Method (2) - to  Microsoft SQL Server\n",
+    "## Extract Bulk Files Step (2) - to  Microsoft SQL Database\n",
     "\n",
     "Loop through the file_list and download each .csv\n",
     "\n",
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,8 +606,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -633,89 +635,236 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_sql(\"select * from [LandonHotel].[dbo].[Guests]\",dbConnnect)\n",
+    "# data.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'delim' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-21-61841fb0d95c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mupload_table\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'tripdata'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'201306citibiketripdata'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdelim\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdbCursor\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'delim' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "upload_table('tripdata','201306citibiketripdata', delim, dbCursor )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def upload_table(path, filename, delim, dbCursor):\n",
+    "    \"\"\"\n",
+    "    Function to upload flat file to sqlserver\n",
+    "    \"\"\"\n",
+    "    tbl = filename.split('.')[0]\n",
+    "    cnt = 0\n",
+    "    with open (path + filename, 'r') as f:\n",
+    "        reader = csv.reader(f, delimiter=delim)\n",
+    "        for row in reader:\n",
+    "            row.pop() # can be commented out\n",
+    "            row = ['NULL' if val == '' else val for val in row]\n",
+    "            row = [x.replace(\"'\", \"''\") for x in row]\n",
+    "            out = \"'\" + \"', '\".join(str(item) for item in row) + \"'\"\n",
+    "            out = out.replace(\"'NULL'\", 'NULL')\n",
+    "            query = \"INSERT INTO \" + tbl + \" VALUES (\" + out + \")\"\n",
+    "            dbCursor.execute(query)\n",
+    "            cnt = cnt + 1\n",
+    "            if cnt % 10000 == 0:\n",
+    "                dbCursor.commit()\n",
+    "        dbCursor.commit()\n",
+    "    print(\"Uploaded \" + str(cnt) + \" rows into table \" + tbl + \".\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "import os\n",
+    "from datetime import datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reporting_period():\n",
+    "    table_name = filename[:4] + '_' + filename[4:6] + '_tripdata'\n",
+    "    as_of_date = filename[:4] + '-' + filename[4:6]\n",
+    "    print(as_of_date)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2013-06\n"
+     ]
+    }
+   ],
+   "source": [
+    "filename ='201306citibiketripdata.csv'\n",
+    "reporting_period()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>GuestID</th>\n",
-       "      <th>FirstName</th>\n",
-       "      <th>LastName</th>\n",
-       "      <th>Address</th>\n",
-       "      <th>City</th>\n",
-       "      <th>State</th>\n",
-       "      <th>PostalCode</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>TimeStamp</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1000</td>\n",
-       "      <td>Katherine</td>\n",
-       "      <td>Reid</td>\n",
-       "      <td>8 Maple Parkway</td>\n",
-       "      <td>Redding</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>96003</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>NaT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1001</td>\n",
-       "      <td>Eric</td>\n",
-       "      <td>Bryant</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaT</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   GuestID  FirstName LastName          Address     City State  PostalCode  \\\n",
-       "0     1000  Katherine     Reid  8 Maple Parkway  Redding    CA  96003        \n",
-       "1     1001       Eric   Bryant             None     None  None        None   \n",
-       "\n",
-       "         Country TimeStamp  \n",
-       "0  United States       NaT  \n",
-       "1           None       NaT  "
+       "'2013-06'"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.read_sql(\"select * from [LandonHotel].[dbo].[Guests]\",dbConnnect)\n",
-    "data.head(2)"
+    "path='tripdata/'\n",
+    "filename ='201306citibiketripdata.csv'\n",
+    "# tbl = filename.split('.')[0]\n",
+    "table_name= filename.split('.')[0]\n",
+    "as_of_date = filename[:4] + '-' + filename[4:6] \n",
+    "# '2013-06'\n",
+    "\n",
+    "table_name = filename[:4] + '_' + filename[4:6] + '_tripdata'\n",
+    "# '2013_06_tripdata'\n",
+    "as_of_date           \n",
+    "       "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['tripduration',\n",
+       " 'starttime',\n",
+       " 'stoptime',\n",
+       " 'start station id',\n",
+       " 'start station name',\n",
+       " 'start station latitude',\n",
+       " 'start station longitude',\n",
+       " 'end station id',\n",
+       " 'end station name',\n",
+       " 'end station latitude',\n",
+       " 'end station longitude',\n",
+       " 'bikeid',\n",
+       " 'usertype',\n",
+       " 'birth year',\n",
+       " 'gender']"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data=pd.read_csv(path + filename)\n",
+    "list(data.columns.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'2013-06',\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "can only concatenate str (not \"NoneType\") to str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-110-448d2d98c16e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m         \u001b[0mout\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"'\"\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m\"', '\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mitem\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrow\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m\"'\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m         \u001b[0mout\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mout\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"'NULL'\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'NULL'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m         \u001b[0mquery\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"INSERT INTO \"\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mtable_name\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m\" VALUES (\"\u001b[0m \u001b[1;33m+\u001b[0m  \u001b[0mas_of\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mout\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m\")\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mquery\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: can only concatenate str (not \"NoneType\") to str"
+     ]
+    }
+   ],
+   "source": [
+    "with open (path + filename,'r') as csvfile: \n",
+    "    csv_reader = csv.reader(csvfile, delimiter = \",\")\n",
+    "    as_of =reporting_period()\n",
+    "    as_of\n",
+    "    for row in csv_reader:\n",
+    "        row.pop() # can be commented out\n",
+    "        row = ['NULL' if val == '' else val for val in row]\n",
+    "        row = [x.replace(\"'\", \"''\") for x in row]\n",
+    "        out = \"'\" + \"', '\".join(str(item) for item in row) + \"'\"\n",
+    "        out = out.replace(\"'NULL'\", 'NULL')\n",
+    "        query = \"INSERT INTO \" + table_name + \" VALUES (\" +  as_of + out + \")\"\n",
+    "        print(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df_op is the dataframe that needs to be written to database and test is the table name in database and col_name1, col_name2,... are the respective column names\n",
+    "dbCursor.fast_executemany = True\n",
+    "for row_count in range(0, df_op.shape[0]):\n",
+    "   chunk = df_op.iloc[row_count:row_count + 1,:].values.tolist()\n",
+    "   tuple_of_tuples = tuple(tuple(x) for x in chunk)\n",
+    "   dbCursor.executemany(\"insert into test\" + \" ([col_name1],   col_name2],[col_name3],[col_name4] values )\",tuple_of_tuples)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -748,7 +897,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
